# RESTful-API-calc

./: README.md  RESTcalc.cabal  RESTcalc.sqlite3  stack.yaml
Handler/: Common.hs  Home.hs
app/: devel.hs  main.hs
config/: client_session_key.aes  keter.yml  routes  settings.yml  test-settings.yml
static/tmp/: autogen-4iFC2iVo.css  autogen-HimTiDIy.js  autogen-dvDTvJPR.js  autogen-hxYJ7yvP.css
templates/: homepage.hamlet
yesod-devel/: arargs.txt  ghcargs.txt
